baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__10_formatter__invalid_syntax.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PARSER ERROR ===
[UnexpectedToken { expected: "class name", found: "integer", span: Span { file_id: FileId(0), range: 6..9 } }, UnexpectedToken { expected: "'{'", found: "integer", span: Span { file_id: FileId(0), range: 6..9 } }, UnexpectedToken { expected: "top-level declaration", found: "integer", span: Span { file_id: FileId(0), range: 6..9 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 9..16 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 17..18 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 44..49 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 50..56 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 57..58 } }, UnexpectedToken { expected: "type", found: "'{'", span: Span { file_id: FileId(0), range: 150..151 } }]
