baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__10_formatter__missing_braces.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== FORMATTER ERROR ===
[UnexpectedToken { expected: "'}'", found: "class", span: Span { file_id: FileId(0), range: 55..60 } }]
