baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__10_formatter__partial_input.snap
---
source: target/debug/build/baml_tests-9a8b4d484ca600e9/out/generated_tests.rs
expression: output
---
=== FORMATTER ERROR ===
[InvalidSyntax { message: "field 'field2' is missing a type annotation", span: Span { file_id: FileId(0), range: 110..116 } }, InvalidSyntax { message: "Attribute is missing a name", span: Span { file_id: FileId(0), range: 159..160 } }, UnexpectedToken { expected: "')'", found: "identifier", span: Span { file_id: FileId(0), range: 242..248 } }, InvalidSyntax { message: "field 'string' is missing a type annotation", span: Span { file_id: FileId(0), range: 242..248 } }, UnexpectedToken { expected: "')'", found: "function", span: Span { file_id: FileId(0), range: 391..399 } }, UnexpectedToken { expected: "return type (->)", found: "function", span: Span { file_id: FileId(0), range: 391..399 } }, UnexpectedToken { expected: "function body", found: "function", span: Span { file_id: FileId(0), range: 391..399 } }, UnexpectedToken { expected: "'{'", found: "identifier", span: Span { file_id: FileId(0), range: 514..520 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 514..520 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 521..522 } }]
