baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__10_formatter__unclosed_string.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PARSER ERROR ===
[UnexpectedToken { expected: "')'", found: "identifier", span: Span { file_id: FileId(0), range: 117..124 } }, UnexpectedToken { expected: "Unclosed string literal", found: "EOF", span: Span { file_id: FileId(0), range: 170..171 } }, UnexpectedToken { expected: "'}'", found: "EOF", span: Span { file_id: FileId(0), range: 170..171 } }]
